# nr-oracle-env

./: .env  .gitignore  README.md  docker-compose.yml  junk.json
data-population/: README.md  env_sample  envsample  pyproject.toml
data-population/db_env_utils/: app_paths.py  async_loader.py  constants.py  data_classification.py  data_types.py  db_lib.py  docker_parser.py  env_config.py  fix_forest_client_fk_violation.py  junk.py  kubernetes_wrapper.py  logging.config  main_common.py  main_data_class_import.py  main_extract.py  main_ingest.py  object_store.py  oradb_lib.py  postgresdb_lib.py
data-population/tests/: conftest.py  init.sql  test_constants.py  test_dataclassification.py  test_datamasking.py  test_demo_of_tests.py  test_docker_parser.py  test_duckdb.py  test_main_common.py  test_object_store.py  test_ora_extractor.py  test_oralib.py  test_postgresdb_lib.py
data-population/tests/fixtures/: dataclassification_fixtures.py  db_connection_params.py  db_fixtures.py  db_ora_extractor.py  demo_fixtures.py  dockerdb_fixtures.py  duckdb_fixtures.py
data-population/tests/test_data/: classification_ss.xlsx  readme.md
data-query-tool/: README.md  batch_run.py  batch_run_deps.py  env_sample  junk.py  logging.config  main.py  pyproject.toml  tablelist.txt
data-query-tool/data/migrations/: V1.0.0__results_inbox_preview.sql  V1.0.1__seedlot.sql  V1.0.2__for_health_result.sql
data-query-tool/data_query_tool/: constants.py  junk.sql  migration_files.py  oralib.py  oralib2.py  types.py
data-query-tool/test/: conftest.py  test_oralib.py
data-query-tool/test/fixtures/: oracle_struct_fixtures.py
data-query-tool/tests/: README.md  conftest.py  pytest.ini  test_migration_files.py  test_oralib.py  test_oralib2.py
data-query-tool/tests/fixtures/: generics_fixtures.py  migration_file_fixtures.py  oracle_struct_fixtures.py
data-query-tool/tests/test_data/: V1.0.1__first_migration_PKG.sql  V1.0.2__first_migration_TRG.sql  V1.3.0__msd_tmbr_mrk_st.sql  V2.1.2__msd_tmbr_mrk_st_TYP.sql  test_migration.sql  test_migration2.sql  test_migration3.sql
data_pump_import/: run_data_pump_import.sh
db_init_sql/: 01_max_role_adjustment.sql  03_grant_select_any.sql  05_move_dp_file.sh
db_init_test/: 01_init_testdb.sql  README.md
docker_comp_ora/dbdock_struct_01/: 02_pre_create_role_script.sql  04_create_dp_dir_obj.sql
docker_comp_ora/dbdock_test_01/init_scripts/: 01_consep_script.sql  02_the_grants.sql
docker_data_pump_file/: data_pump_file_here.txt
docs/: data_extraction.md  data_load.md  data_query_tool.md  dependency_tool_cli.md  dev_notes.md  misc.md  struct_db.md
docs/presentation/: DbScript.sql  notes.md  readme.md  slides.md
sql/: DAT_DEPEND_BCGW_GRANTS_VW.sql  DAT_DEPEND_BCGW_OBJECTS_VW.sql  DAT_INPUT_BCGW_OBJECTS_VW.sql  README.md
utils/: analyze_data_class.py  config.py  consolidate_data_classification.py  count_ddb_table_recs.py  demo_connect_sharepoint.py  logging.config  pyproject.toml
