[project]
name = "data-query-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "oracledb>=2.5.0",
    "sql-metadata>=2.15.0",
    "sqlalchemy>=2.0.36",
    "sqlparse>=0.5.3",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.2",
]

[tool.ruff.lint]
select = ["ALL"]

[tool.isort]
profile = "black"
line_length = 80
include_trailing_comma = true

[tool.ruff]
line-length = 80
select = ["ALL"]

# Ignore some errors in tests as they are not relevant
[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "S105", # local dev password fields are verified
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
